2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Also test using COMA during `make check'.

	* build-aux/slctests.m4: New AM conditional `ENABLE_CHECK_COMA'.

	* build-aux/slctests.mk: Use it.
	
2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for COMA in `slr'.
	
	* build-aux/mgsim.m4: Search for `simx-alpha'.
	
	* tools/bin/slr.in: Add flags for COMA memory configuration. Move
	simulator-specific tests to...
	
	* tools/bin/r-mt-sim.sh.in: ...here. Select simulator executable
	depending on memory configuration.

2009-11-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Share runner script code between MT-Alpha/MT-Sparc.

	* tools/lib/r-mtsparc-sim.sh.in: Remove.
	* tools/lib/r-mtalpha-sim.sh.in: Rename to...	
	* tools/lib/r-mt-sim.sh.in: ...here. Change references to `alpha'
	to references to `@arch@'.
	
	* tools/lib/Makefile.am: Generate `r-mtalpha-sim.sh' and
	`r-mtsparc-sim.h' from `r-mt-sim.sh.in'.

	* configure.ac: Remove them from AC_CONFIG_FILES since they are
	now explicitly generated by the Makefile.

2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update `utc0' code generation.
	
	* tools/lib/t-utc0/slimpl.m4: Expand to `sync()' instead of
	`__builtin_ut_sync()' (requested by S. Polstra).

2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix minor portability issue.

	* tools/lib/arggen.c: Only use threads when running MT. 

2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix minor bug in `slc'.

	When running with `slc -g -g' the underlying compiler would be
	confused. (reported by A. Matei)
	
	* tools/bin/cce.in: Properly split `slc_debug_flags' into an
	array.

2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve `slr' to allow more debugging.
	
	* tools/bin/slr.in: New option `-gd' to debug data generation.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor improvements to data input via `slr' and `sag'.
	
	* tools/lib/arggen.c: Optimize by using a parallel loop (suggested
	by M. Lankamp)
